fixed weird alignment

--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,7 +1,7 @@
 .Skills {
   padding-top: 1rem;
   background: #313131;
-  height: 90vh;
+  height: 120vh;
   padding-bottom: 5%;
 }
 .Skills .Container {
